[metadata]
name = napari-nematostellaanalyser
version = attr: napari_nematostellaanalyser.__version__
description = This plugin takes a number of images and computes sleep behaviour based on motion detection.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/beniroquai/napari-nematostellaanalyser
author = Benedict Diederich
author_email = benedictdied@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/beniroquai/napari-nematostellaanalyser/issues
    Documentation = https://github.com/beniroquai/napari-nematostellaanalyser#README.md
    Source Code = https://github.com/beniroquai/napari-nematostellaanalyser
    User Support = https://github.com/beniroquai/napari-nematostellaanalyser/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    scikit-image

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-nematostellaanalyser = napari_nematostellaanalyser:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
